--- a/style.css
+++ b/style.css
@@ -374,6 +374,13 @@ footer a:hover{
 }
 
 @media (min-width: 320px) and (max-width: 480px){
+    body{
+        margin: 0;
+        padding: 0;
+        color: black;
+        background: white;
+        overflow-x: hidden;
+    }
     header{
         background-image: url(imgs/sol.jpg);
         background-repeat: no-repeat;
