--- a/style.css
+++ b/style.css
@@ -74,6 +74,7 @@ nav > img {
 }
 .texto a{
     position: relative;
+    color: white;
     text-decoration: none;
     padding: 20px;
 }
@@ -125,6 +126,11 @@ nav:hover  .texto{
 }
 
 
+p{
+    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+    font-weight: bold;
+}
+
 
 .maquinas > h1{
     text-align: center;
@@ -151,9 +157,28 @@ nav:hover  .texto{
 
 .conteudo_produto .carrosel{
     overflow: hidden;
-    width: 50vw;
+    max-width: 50vw;
 }
-
+.conteudo_produto .wrap{
+    display: grid;
+    grid-auto-flow: column;
+    grid-auto-columns: 650px;
+    justify-items: stretch;
+    animation: slideinv 25s linear infinite;
+}
+.conteudo_produto .wrap img{
+    width: max-content;
+    height: 400px;
+    border-radius: 15px;
+    object-fit: cover;
+}
+@keyframes slideinv{
+    from{
+        transform: translateX(-350%);
+    }to{
+        transform: translateX(100%);
+    }
+}
 .textop{
     width: 52vw;
     font-family: Arial, Helvetica, sans-serif;
@@ -170,8 +195,6 @@ nav:hover  .texto{
 }
 .conteudo_tecnologias{
     display: flex;
-    font-family: Arial, Helvetica, sans-serif;
-    font-weight: bold;
     gap: 20px;
 }
 
@@ -184,21 +207,25 @@ footer{
 footer  h2{
     font-family: monospace;
 }
+footer a{
+    color: white;
+    font-size: larger;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    transition: 0.5s;
+}
+footer a:hover{
+    color: rgb(194, 180, 180);
+    transition: 0.5s;
+}
 footer > p{
     text-align: center;
     font-weight: bolder;
     font-size: large;
 }
-footer a{
-    font-weight: bolder;
-    font-size: large;
-    color: white;
-    transition: 0.5s;
 
-}
-footer a:hover{
-    transition: 0.5s;
-    color: rgb(13, 151, 13);
+footer img{
+    height: 10vh;
+    border-radius: 50%;
 }
 .patrocinio{
     height: 20vh;
@@ -206,7 +233,7 @@ footer a:hover{
     align-content: center;
 }
 .patrocinio a{
-    margin-left: 17%;
+    margin-left: 15%;
     text-decoration: none;
     align-self: center;
     color: rgb(15, 155, 15);
@@ -273,20 +300,27 @@ footer a:hover{
 
     .conteudo_produto .carrosel{
         overflow: hidden;
-        width: 50vw;
+        max-width: 45vw;
     }
     .conteudo_produto .wrap{
         display: grid;
         grid-auto-flow: column;
-        grid-auto-columns: 850px;
+        grid-auto-columns: 700px;
         justify-items: stretch;
-        animation: slide 25s linear infinite;
+        animation: slideinv 25s linear infinite;
     }
     .conteudo_produto .wrap img{
-        width: 800px;
-        height: 600px;
+        width: max-content;
+        height: 400px;
         border-radius: 15px;
         object-fit: cover;
+    }
+    @keyframes slideinv{
+        from{
+            transform: translateX(-700%);
+        }to{
+            transform: translateX(100%);
+        }
     }
 
 
@@ -301,8 +335,12 @@ footer a:hover{
         transition: 0.5s;
         color: rgb(13, 151, 13);
     }
+    footer img{
+        height: 7vh;
+        border-radius: 50%;
+    }
     .patrocinio a{
-        margin-left: 12%;
+        margin-left: 10%;
         text-decoration: none;
         align-self: center;
         color: rgb(15, 155, 15);
@@ -350,7 +388,30 @@ footer a:hover{
         color: white;
     }
 
-   
+    .conteudo_produto .carrosel{
+        overflow: hidden;
+        max-width: 45vw;
+    }
+    .conteudo_produto .wrap{
+        display: grid;
+        grid-auto-flow: column;
+        grid-auto-columns: 700px;
+        justify-items: stretch;
+        animation: slideinv 25s linear infinite;
+    }
+    .conteudo_produto .wrap img{
+        width: max-content;
+        height: 400px;
+        border-radius: 15px;
+        object-fit: cover;
+    }
+    @keyframes slideinv{
+        from{
+            transform: translateX(-700%);
+        }to{
+            transform: translateX(100%);
+        }
+    }
 
     footer a{
         font-weight: bolder;
@@ -363,8 +424,12 @@ footer a:hover{
         transition: 0.5s;
         color: rgb(13, 151, 13);
     }
+    footer img{
+        height: 6vh;
+        border-radius: 50%;
+    }
     .patrocinio a{
-        margin-left: 12%;
+        margin-left: 10%;
         text-decoration: none;
         align-self: center;
         color: rgb(15, 155, 15);
@@ -372,6 +437,30 @@ footer a:hover{
         font-size: large;
     }
 }
+
+@media (width: 800px){
+    header{
+        background-image: url(../imgs/sol.jpg);
+        background-repeat: no-repeat;
+        background-size: 100vw 80vh;
+        position: relative;
+        max-width: 100vw;
+        min-height: 41vh;
+    }
+    footer img{
+        height: 7vh;
+        border-radius: 50%;
+    }
+    .patrocinio a{
+        margin-left: 7%;
+        text-decoration: none;
+        align-self: center;
+        color: rgb(15, 155, 15);
+        font-family: Arial, Helvetica, sans-serif;
+        font-size: large;
+    }
+}
+
 
 @media (min-width: 320px) and (max-width: 480px){
     body{
@@ -458,20 +547,27 @@ footer a:hover{
 
     .conteudo_produto .carrosel{
         overflow: hidden;
-        width: 250vw;
+        max-width: 100vw;
     }
     .conteudo_produto .wrap{
         display: grid;
         grid-auto-flow: column;
-        grid-auto-columns: 650px;
+        grid-auto-columns: 700px;
         justify-items: stretch;
-        animation: slide 25s linear infinite;
+        animation: slideinv 25s linear infinite;
     }
     .conteudo_produto .wrap img{
-        width: 600px;
+        width: max-content;
         height: 400px;
         border-radius: 15px;
         object-fit: cover;
+    }
+    @keyframes slideinv{
+        from{
+            transform: translateX(-490%);
+        }to{
+            transform: translateX(100%);
+        }
     }
     .conteudo_produto{
         display: block;
@@ -499,8 +595,12 @@ footer a:hover{
         transition: 0.5s;
         color: rgb(13, 151, 13);
     }
+    footer img{
+        height: 6vh;
+        border-radius: 50%;
+    }
     .patrocinio a{
-        margin-left: 5%;
+        margin-left: 6%;
         text-decoration: none;
         align-self: center;
         color: rgb(15, 155, 15);
