--- a/assets/creditos.css
+++ b/assets/creditos.css
@@ -18,14 +18,21 @@ header{
     max-width: 100vw;
     min-height: 30vh;
 }
-header h1{
-    text-decoration: underline;
-}
+
 header > .titulo{
     text-align: center;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    color: green;
     font-size: 30px;
+}
+.titulo a{
+    text-decoration: none;
+    color: green;
+    transition: 0.5s;
+}
+.titulo a:hover{
+    text-decoration: underline;
+    transition: 0.5s;
+    color: #26580f;
 }
 header > a > img{
     display: flex;
@@ -38,18 +45,6 @@ nav{
     width: 50px;
     margin-top: 20vh;
 }
-.Home{
-    position: absolute;
-    right: 20px;
-    margin-top: 105px;
-    color: white;
-    transition: 0.5s;
-}
-.Home:hover{
-    color: rgb(85, 80, 80);
-    transition: 0.5s;
-}
-
 
 nav > img {
     border-radius: 15px;
@@ -135,13 +130,17 @@ footer a:hover{
     transition: 0.5s;
     color: rgb(13, 151, 13);
 }
+footer img{
+    height: 10vh;
+    border-radius: 50%;
+}
 .patrocinio{
     height: 20vh;
     background: darkgreen;
     align-content: center;
 }
 .patrocinio a{
-    margin-left: 17%;
+    margin-left: 15%;
     text-decoration: none;
     align-self: center;
     color: rgb(15, 155, 15);
@@ -151,7 +150,10 @@ footer a:hover{
 .patrocinio a:hover{
     text-decoration: underline;
 }
-
+li{
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-weight: 800;
+}
 
 
 @media (min-width: 481px) and (max-width: 768px){
@@ -183,13 +185,6 @@ footer a:hover{
         text-align: center;
         color: white;
     }
-    .Home{
-        position: absolute;
-        right: 20px;
-        margin-top: 160px;
-        color: white;
-        transition: 0.5s;
-    }
 
     footer a{
         font-weight: bolder;
@@ -202,8 +197,12 @@ footer a:hover{
         transition: 0.5s;
         color: rgb(13, 151, 13);
     }
+    footer img{
+        height: 7vh;
+        border-radius: 50%;
+    }
     .patrocinio a{
-        margin-left: 12%;
+        margin-left: 10%;
         text-decoration: none;
         align-self: center;
         color: rgb(15, 155, 15);
@@ -250,13 +249,6 @@ footer a:hover{
         text-align: center;
         color: white;
     }
-    .Home{
-        position: absolute;
-        right: 20px;
-        margin-top: 190px;
-        color: white;
-        transition: 0.5s;
-    }
 
     footer a{
         font-weight: bolder;
@@ -269,8 +261,12 @@ footer a:hover{
         transition: 0.5s;
         color: rgb(13, 151, 13);
     }
+    footer img{
+        height: 10vh;
+        border-radius: 50%;
+    }
     .patrocinio a{
-        margin-left: 12%;
+        margin-left: 7%;
         text-decoration: none;
         align-self: center;
         color: rgb(15, 155, 15);
@@ -280,16 +276,27 @@ footer a:hover{
 }
 
 @media (width: 800px){
-    .Home{
-        position: absolute;
-        right: 20px;
-        margin-top: 210px;
-        color: white;
-        transition: 0.5s;
+    header{
+        background-image: url(../imgs/sol.jpg);
+        background-repeat: no-repeat;
+        background-size: 100vw 80vh;
+        position: relative;
+        max-width: 100vw;
+        min-height: 41vh;
+    }
+    footer img{
+        height: 7vh;
+        border-radius: 50%;
+    }
+    .patrocinio a{
+        margin-left: 7%;
+        text-decoration: none;
+        align-self: center;
+        color: rgb(15, 155, 15);
+        font-family: Arial, Helvetica, sans-serif;
+        font-size: large;
     }
 }
-
-
 
 @media (min-width: 320px) and (max-width: 480px){
     header{
@@ -343,8 +350,12 @@ footer a:hover{
         transition: 0.5s;
         color: rgb(13, 151, 13);
     }
+    footer img{
+        height: 6vh;
+        border-radius: 50%;
+    }
     .patrocinio a{
-        margin-left: 5%;
+        margin-left: 6%;
         text-decoration: none;
         align-self: center;
         color: rgb(15, 155, 15);
