--- a/style.css
+++ b/style.css
@@ -21,9 +21,11 @@ header{
 header > .titulo{
     text-align: center;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    color: green;
+    text-shadow: 2px 1px;
+    color: rgb(15, 110, 15);
     font-size: 30px;
 }
+
 header > a > img{
     display: flex;
     margin-left: 10px;
@@ -174,16 +176,14 @@ p{
 }
 @keyframes slideinv{
     from{
-        transform: translateX(-350%);
+        transform: translateX(-350%); /*Pega inverte a ordem e faz começar da última imagem */
     }to{
         transform: translateX(100%);
     }
 }
 .textop{
     width: 52vw;
-    font-family: Arial, Helvetica, sans-serif;
     font-weight: bold;
-    
 }
 
 
@@ -197,7 +197,44 @@ p{
     display: flex;
     gap: 20px;
 }
-
+.farm > h1{
+    text-align: center;
+}
+.conteudo_farm > img{
+    margin-left: 10px;
+}
+.conteudo_farm{
+    display: flex;
+    gap: 20px;
+}
+.conteudo_farm .carrosel{
+    overflow: hidden;
+    max-width: 50vw;
+}
+.conteudo_farm .wrap{
+    display: grid;
+    grid-auto-flow: column;
+    grid-auto-columns: 750px;
+    justify-items: stretch;
+    animation: slideinv 25s linear infinite;
+}
+.conteudo_farm .wrap img{
+    width: max-content;
+    height: 400px;
+    border-radius: 15px;
+    object-fit: cover;
+}
+@keyframes slideinv{
+    from{
+        transform: translateX(-350%); /*Pega inverte a ordem e faz começar da última imagem */
+    }to{
+        transform: translateX(100%);
+    }
+}
+.texto_f{
+    width: 52vw;
+    font-weight: bold;
+}
 
 footer{
     background: rgb(120, 179, 33);
@@ -324,6 +361,32 @@ footer img{
     }
 
 
+
+    .conteudo_farm .carrosel{
+        overflow: hidden;
+        max-width: 50vw;
+    }
+    .conteudo_farm .wrap{
+        display: grid;
+        grid-auto-flow: column;
+        grid-auto-columns: 800px;
+        justify-items: stretch;
+        animation: slideinv 25s linear infinite;
+    }
+    .conteudo_farm .wrap img{
+        width: max-content;
+        height: 400px;
+        border-radius: 15px;
+        object-fit: cover;
+    }
+    @keyframes slideinv{
+        from{
+            transform: translateX(-350%); /*Pega inverte a ordem e faz começar da última imagem */
+        }to{
+            transform: translateX(100%);
+        }
+    }
+
     footer a{
         font-weight: bolder;
         font-size: large;
@@ -413,6 +476,41 @@ footer img{
         }
     }
 
+
+    .conteudo_farm .carrosel{
+        overflow: hidden;
+        max-width: 50vw;
+    }
+    .conteudo_farm .wrap{
+        display: grid;
+        grid-auto-flow: column;
+        grid-auto-columns: 750px;
+        justify-items: stretch;
+        animation: slideinv 25s linear infinite;
+    }
+    .conteudo_farm .wrap img{
+        width: max-content;
+        height: 400px;
+        border-radius: 15px;
+        object-fit: cover;
+    }
+    .conteudo_farm .carrosel{
+        overflow: hidden;
+        max-width: 50vw;
+    }
+    .conteudo_farm .wrap{
+        display: grid;
+        grid-auto-flow: column;
+        grid-auto-columns: 750px;
+        justify-items: stretch;
+        animation: slideinv 25s linear infinite;
+    }
+    .conteudo_farm .wrap img{
+        width: max-content;
+        height: 400px;
+        border-radius: 15px;
+        object-fit: cover;
+    }
     footer a{
         font-weight: bolder;
         font-size: large;
@@ -433,7 +531,7 @@ footer img{
         text-decoration: none;
         align-self: center;
         color: rgb(15, 155, 15);
-        font-family: Arial, Helvetica, sans-serif;
+        padding: 0;
         font-size: large;
     }
 }
@@ -582,6 +680,38 @@ footer img{
 
     .conteudo_tecnologias{
         display: block;
+    }
+
+
+    .conteudo_farm{
+        display: block;
+    }
+    .conteudo_farm .carrosel{
+        overflow: hidden;
+        max-width: 100vw;
+    }
+    .conteudo_farm .wrap{
+        display: grid;
+        grid-auto-flow: column;
+        grid-auto-columns: 750px;
+        justify-items: stretch;
+        animation: slideinv 25s linear infinite;
+    }
+    .conteudo_farm .wrap img{
+        width: max-content;
+        height: 400px;
+        border-radius: 15px;
+        object-fit: cover;
+    }
+    @keyframes slideinv{
+        from{
+            transform: translateX(-490%);
+        }to{
+            transform: translateX(100%);
+        }
+    }
+    .texto_f{
+        width: 100%;
     }
 
     footer a{
